# projectionmodels

./: .gitignore  CHANGELOG.md  CHANGES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: calculated_assumptions.py  date_cohorts.py  demo.py  expenses.py  general_projection.py  health_claims.py  member_level_projection.py  pooled_claims.py  renewal_rate_actions.py  sensitivity_analysis.py  underwriting_results.py
examples/advanced/: general_projection.py
src/projectionmodels/: __init__.py  actuarialpy_adapter.py  adjustments.py  assumptions.py  book.py  calculations.py  claims.py  data.py  exceptions.py  expenses.py  group.py  horizon.py  model.py  pmpm.py  premium.py  premiums.py  results.py
src/projectionmodels/advanced/: __init__.py
src/projectionmodels/integrations/: __init__.py  actuarialpy.py
tests/: conftest.py  test_actuarialpy_estimators.py  test_adjustments.py  test_adjustments_extended.py  test_assumption_domains.py  test_assumptions.py  test_assumptions_extended.py  test_calculations_extended.py  test_claims.py  test_data.py  test_data_extended.py  test_ergonomics.py  test_example_outputs.py  test_examples.py  test_expenses.py  test_horizon.py  test_horizon_adapter_extended.py  test_model.py  test_model_extended.py  test_premiums.py  test_projectionmodels.py  test_public_api.py  test_public_api_docstrings.py  test_results.py  test_results_extended.py  test_wide_experience.py  test_worked_example_contract.py  test_worked_example_projection.py  test_workflows_extended.py
