[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projectionmodels"
version = "0.8.1"
description = "Focused actuarial claim, premium, membership, and expense projections."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Michael Bryant" }]
keywords = [
  "actuarial",
  "insurance",
  "projection",
  "forecasting",
  "claims",
  "credibility",
  "trend",
  "seasonality",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "actuarialpy>=0.46,<0.47",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "hypothesis>=6",
  "ruff>=0.5",
  "mypy>=1.8",
  "pandas-stubs>=2.0",
  "build>=1",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/OpenActuarial/projectionmodels"
Documentation = "https://openactuarial.org/projectionmodels.html"
Repository = "https://github.com/OpenActuarial/projectionmodels"
Issues = "https://github.com/OpenActuarial/projectionmodels/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/projectionmodels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
packages = ["projectionmodels"]
warn_unused_ignores = true
no_implicit_optional = true
